<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionUsuario">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cu_tv_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/cu_btn_actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <EditText
        android:id="@+id/cu_txt_nombre"
        android:layout_width="338dp"
        android:layout_height="39dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/cu_txt_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/cu_txt_apellido"
        android:layout_width="338dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cu_txt_apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cu_txt_nombre" />

    <EditText
        android:id="@+id/cu_txt_direccion"
        android:layout_width="338dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cu_txt_direccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cu_txt_apellido" />

    <EditText
        android:id="@+id/cu_number_telefono"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cu_number_telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cu_txt_direccion" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="338dp"
        android:layout_height="108dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cu_number_telefono"
        tools:layout_editor_absoluteX="38dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/cu_rb_hombre" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="143dp"
            android:layout_height="61dp"
            android:text="@string/cu_rb_mujer" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>