<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuario"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="REGISTRO DE USUARIO"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="@string/pr_txt_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_crearpersona_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="@string/pr_txt_contrasenia"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_clave_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="@string/pr_txt_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_crearpersona_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenia" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="Apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_crearpersona_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="@string/pr_txt_direccion"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_creardireccion_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_personalizada"
        android:ems="10"
        android:hint="@string/pr_number_telefono"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/icono_creartelefono_personalizado"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="288dp"
        android:layout_height="99dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono">

        <RadioButton
            android:id="@+id/pr_rb_hombre"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/pr_rb_hombre" />

        <RadioButton
            android:id="@+id/pr_rb_mujer"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/pr_rb_mujer" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pr_btn_registrarme"
        android:textColor="@color/secundarioApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSexo"
        app:layout_constraintVertical_bias="0.126" />
</androidx.constraintlayout.widget.ConstraintLayout>